Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -1049,6 +1049,48 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{1990ApJ...358..344M,
+       author = {{Massey}, Philip and {Gronwall}, Caryl},
+        title = "{The Kitt Peak Spectrophotometric Standards: Extension to 1 Micron}",
+      journal = {\apj},
+     keywords = {Astronomical Photometry, Infrared Astronomy, Infrared Spectra, Spectrophotometry, Charge Coupled Devices, Data Reduction, Error Analysis, Stellar Magnitude, Wavelengths, Astronomy, INFRARED: SPECTRA, SPECTROPHOTOMETRY},
+         year = 1990,
+        month = jul,
+       volume = {358},
+        pages = {344},
+          doi = {10.1086/168991},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1990ApJ...358..344M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1984MNRAS.206..241B,
+       author = {{Baldwin}, J.~A. and {Stone}, R.~P.~S.},
+        title = "{Southern spectrophotometric standards for large telescopes - II.}",
+      journal = {\mnras},
+     keywords = {Reference Stars, Stellar Spectra, Stellar Spectrophotometry, Telescopes, Calibrating, Interpolation, Southern Sky, Astronomy},
+         year = 1984,
+        month = jan,
+       volume = {206},
+        pages = {241-245},
+          doi = {10.1093/mnras/206.2.241},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1984MNRAS.206..241B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1983MNRAS.204..347S,
+       author = {{Stone}, R.~P.~S. and {Baldwin}, J.~A.},
+        title = "{Southern spectrophotometric standards for large telescopes.}",
+      journal = {\mnras},
+     keywords = {Spectral Energy Distribution, Standards, Stellar Spectrophotometry, Telescopes, Interpolation, Southern Hemisphere, Tables (Data), White Dwarf Stars, Astronomy},
+         year = 1983,
+        month = jul,
+       volume = {204},
+        pages = {347-353},
+          doi = {10.1093/mnras/204.2.347},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1983MNRAS.204..347S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 
