Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -390,7 +390,7 @@ and maintenance to the user-end, but it will allow rapid modification of the
 data reduction workflow if there are any changes in the instrumental
 configuration, for example, a detector is refitted, and the detector plane is
 shifted and rotated by a few pixels. \textsc{ASPIRED} also aims to provide a
-set of functions that requires coding skills that students should have attained
+set of functions that require coding skills that students should have attained
 from the university-level of Observational Astrophysics course.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -472,10 +472,7 @@ upon each \texttt{commit} for:
     \item generating API documentation powered by \textsc{Sphinx}\footnote{\url{
     https://www.sphinx-doc.org/en/master}} which scans for the \textit{decorators}
     and automatically format the written documentation, docstings into
-    interactive html pages which can also be exported as a pdf file.
-    
-    
-    
+    interactive html pages which can also be exported as a pdf file. They are
     hosted on Read the Docs\footnote{\url{
     https://aspired.readthedocs.io/en/latest}}.
 \end{enumerate}
