--- a/main.bib
+++ b/main.bib
@@ -1091,6 +1091,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{2004SPIE.5492..331C,
+       author = {{Clemens}, J. Christopher and {Crain}, J. Adam and {Anderson}, Robert},
+        title = "{The Goodman spectrograph}",
+    booktitle = {Ground-based Instrumentation for Astronomy},
+         year = 2004,
+       editor = {{Moorwood}, Alan F.~M. and {Iye}, Masanori},
+       series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
+       volume = {5492},
+        month = sep,
+        pages = {331-340},
+          doi = {10.1117/12.550069},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004SPIE.5492..331C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 
